<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/gridLayoutSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:columnCount="4"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rowGap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="   "
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rowId"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/id"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rowWinner"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:text="@string/winner"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rowLoser"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:text="@string/loser"
            android:gravity="center"
            android:textSize="12sp" />
    </GridLayout>
</LinearLayout>