<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_game"
        android:name="com.darth.rockpaperscissorslizardspock.view.GameFragment"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_game" />

    <GridLayout
        android:id="@+id/gridLayoutSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:columnCount="4"
        android:rowCount="1"
        android:background="#3E94C9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_game">

        <TextView
            android:id="@+id/rowGap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="   "
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rowId"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/games"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rowWinner"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/winner"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rowLoser"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/loser"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </GridLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_list"
        android:name="com.darth.rockpaperscissorslizardspock.view.ListFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayoutSingle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_list" />

</androidx.constraintlayout.widget.ConstraintLayout>
